# Bazel_POC

./: .gitignore  BUILD  LICENSE  README.md  WORKSPACE.bazel  bazel-Bazel_POC  bazel-bin  bazel-out  bazel-testlogs
projects/Node/: BUILD.bazel  package-lock.json  package.json  server.js
projects/java/: BUILD.bazel
projects/java/src/main/java/com/example/demo/: DemoApplication.java
projects/java/src/main/java/com/example/demo/controller/: SpringBootController.java
projects/java/src/main/java/com/example/demo/service/: GetData.java
